fix: Sticky position on safari

--- a/src/Vue3DatePicker/style/components/_SelectionGrid.scss
+++ b/src/Vue3DatePicker/style/components/_SelectionGrid.scss
@@ -77,6 +77,7 @@
 }
 
 .dp__overlay_action {
+    position: -webkit-sticky;
     position: sticky;
     bottom: 0;
     background: #fff;
